--- a/style.css
+++ b/style.css
@@ -14,3 +14,14 @@
     background-size: cover;
 }
 
+#title {
+    font-size: 5em;
+    font-family: "titleFont";
+    color: white;
+    text-align: center;
+}
+
+#title-background {
+    background-color: rgba(0, 0 , 0, 0.5);
+    margin-top: 30%;
+}
