--- a/style.css
+++ b/style.css
@@ -18,10 +18,18 @@
     font-size: 5em;
     font-family: "titleFont";
     color: white;
-    text-align: center;
 }
 
 #title-background {
     background-color: rgba(0, 0 , 0, 0.5);
     margin-top: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 140px;
+}
+
+#logo {
+    width: auto;
+    height: 100px;
 }
