--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 }
 
 #left-side {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 60rem;
     height: 100vh;
     background-image: url(pictures/ferns.jpg);
@@ -26,10 +29,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     height: 140px;
 }
 
 #logo {
     width: auto;
     height: 100px;
+}
+
+footer {
+    align-self: flex-end;
+}
+
+#copyright {
+    color: white;
 }
