--- a/style.css
+++ b/style.css
@@ -118,3 +118,12 @@ h2 {
     font-weight: bold;
     font-size: 1.5em;
 }
+
+#footer-text {
+    font-size: 1.3em;
+}
+
+#footer-text em {
+    font-style: normal;
+    color: #596D48;
+}
